# videochat-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
cmake/: CommonProjectOptions.cmake  CompileWarnings.cmake
src/: CMakeLists.txt  lib.cpp  main.cpp
